@@ -141,9 +141,6 @@ public class ServiceOfApplicationService {
     public static final String EMAIL = "email";
     public static final String POST = "post";
     public static final String COURT = "Court";
-    public static final String BY_EMAIL = "By email";
-    public static final String BY_EMAIL_AND_POST = "By email and post";
-    public static final String BY_POST = "By post";
     public static final String DA_APPLICANT_NAME = "daApplicantName";
     public static final String PRL_COURT_ADMIN = "PRL Court admin";
     public static final String DASH_BOARD_LINK = "dashBoardLink";
@@ -332,7 +329,7 @@ public class ServiceOfApplicationService {
         return ServedApplicationDetails.builder().emailNotificationDetails(emailNotificationDetails)
             .servedBy(userService.getUserDetails(authorization).getFullName())
             .servedAt(formatter)
-            .modeOfService(getModeOfService(emailNotificationDetails, bulkPrintDetails))
+            .modeOfService(CaseUtils.getModeOfService(emailNotificationDetails, bulkPrintDetails))
             .whoIsResponsible(whoIsResponsibleForServing)
             .bulkPrintDetails(bulkPrintDetails).build();
     }
@@ -972,22 +969,6 @@ public class ServiceOfApplicationService {
         return bulkPrintDetails;
     }
 
-    private String getModeOfService(List<Element<EmailNotificationDetails>> emailNotificationDetails,
-                                    List<Element<BulkPrintDetails>> bulkPrintDetails) {
-        String temp = null;
-        if (null != emailNotificationDetails && !emailNotificationDetails.isEmpty()) {
-            temp = BY_EMAIL;
-        }
-        if (null != bulkPrintDetails && !bulkPrintDetails.isEmpty()) {
-            if (null != temp) {
-                temp = BY_EMAIL_AND_POST;
-            } else {
-                temp = BY_POST;
-            }
-        }
-        return temp;
-    }
-
     private List<Element<EmailNotificationDetails>> sendNotificationToFl401Solicitor(CaseData caseData, String authorization, List<Document> packA,
                                                                                      List<Document> packB) {
         List<Element<EmailNotificationDetails>> emailNotificationDetails = new ArrayList<>();
@@ -1265,8 +1246,7 @@ public class ServiceOfApplicationService {
                         .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(
                             C1A_BLANK_DOCUMENT_FILENAME))
                         .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(
-                            C7_BLANK_DOCUMENT_FILENAME))
-                        .collect(Collectors.toList()));
+                            C7_BLANK_DOCUMENT_FILENAME)).toList());
         return docs;
     }
 
@@ -1277,8 +1257,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getSoaSelectedOrders(caseData));
         // Annex Y to be excluded
         docs.addAll(staticDocs.stream()
-            .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(SOA_C9_PERSONAL_SERVICE_FILENAME))
-            .collect(Collectors.toList()));
+                        .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(SOA_C9_PERSONAL_SERVICE_FILENAME)).toList());
         return docs;
     }
 
@@ -2120,7 +2099,7 @@ public class ServiceOfApplicationService {
         return ServedApplicationDetails.builder().emailNotificationDetails(emailNotificationDetails)
             .servedBy(userService.getUserDetails(authorization).getFullName())
             .servedAt(formatter)
-            .modeOfService(getModeOfService(emailNotificationDetails, bulkPrintDetails))
+            .modeOfService(CaseUtils.getModeOfService(emailNotificationDetails, bulkPrintDetails))
             .whoIsResponsible(COURT)
             .bulkPrintDetails(bulkPrintDetails).build();
     }
@@ -2142,47 +2121,6 @@ public class ServiceOfApplicationService {
                 log.error("Failed to serve application via email notification to La {}", e.getMessage());
             }
         }
-    }
-
-    // Use this method once respondent packs personally served to respondents by court admin or bailiff
-    public ServedApplicationDetails checkAndServeRespondentPacksCaOrBailiffPersonalService(CaseData caseData,
-                                                                        List<Element<EmailNotificationDetails>> emailNotificationDetails,
-                                                                        List<Element<BulkPrintDetails>> bulkPrintDetails,
-                                                                        SoaPack unServedRespondentPack,
-                                                                        String authorization, String solicitorEmail) {
-        if (SoaSolicitorServingRespondentsEnum.courtAdmin.toString().equalsIgnoreCase(unServedRespondentPack.getPersonalServiceBy())) {
-            emailNotificationDetails.add(element(EmailNotificationDetails.builder()
-                                                     .emailAddress(solicitorEmail)
-                                                     .servedParty(PRL_COURT_ADMIN)
-                                                     .docs(unServedRespondentPack.getPackDocument())
-                                                     .attachedDocs(String.join(",", unServedRespondentPack
-                                                         .getPackDocument().stream()
-                                                         .map(Element::getValue)
-                                                         .map(Document::getDocumentFileName).toList()))
-                                                     .timeStamp(DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm:ss")
-                                                                    .format(ZonedDateTime.now(ZoneId.of("Europe/London"))))
-                                                     .build()));
-        } else if (SoaSolicitorServingRespondentsEnum.courtBailiff.toString()
-            .equalsIgnoreCase(unServedRespondentPack.getPersonalServiceBy())) {
-            bulkPrintDetails.add(element(BulkPrintDetails.builder()
-                                             .servedParty(PRL_COURT_ADMIN)
-                                             .printedDocs(String.join(",", unServedRespondentPack
-                                                 .getPackDocument().stream()
-                                                 .map(Element::getValue)
-                                                 .map(Document::getDocumentFileName).toList()))
-                                             .printDocs(unServedRespondentPack.getPackDocument())
-                                             .timeStamp(DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm:ss")
-                                                            .format(ZonedDateTime.now(ZoneId.of("Europe/London"))))
-                                             .build()));
-        }
-        ZonedDateTime zonedDateTime = ZonedDateTime.now(ZoneId.of(EUROPE_LONDON_TIME_ZONE));
-        String formatter = DateTimeFormatter.ofPattern(DD_MMM_YYYY_HH_MM_SS).format(zonedDateTime);
-        return ServedApplicationDetails.builder().emailNotificationDetails(emailNotificationDetails)
-            .servedBy(userService.getUserDetails(authorization).getFullName())
-            .servedAt(formatter)
-            .modeOfService(getModeOfService(emailNotificationDetails, bulkPrintDetails))
-            .whoIsResponsible(COURT)
-            .bulkPrintDetails(bulkPrintDetails).build();
     }
 
     private void checkAndSendCafcassCymruEmails(CaseData caseData, List<Element<EmailNotificationDetails>> emailNotificationDetails) {
